# MiniVM

./: .gitignore  CMakeLists.txt  Makefile  README.md
build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  rhino_lab
docs/: INSTRUCTION_SET.md  LANGUAGE_VM_GUIDE.md  METADATA_JSON.md  SOURCE_COMPAT.md  USAGE.md  WEB_GUIDE.html
examples/: advanced_instructions.json  codeblock_static_shape.json  containers.json  function.json  function_call.json  instruction_coverage.json  loop.json  minimal.json  source_style.json
src/: main.cpp
src/debug/: Disassembler.cpp  Disassembler.h
src/metadata/: CodeBlock.h  Loader.cpp  Loader.h  Program.h  Verifier.cpp  Verifier.h
src/runtime/: Builtins.cpp  Builtins.h
src/util/: Json.cpp  Json.h
src/vm/: Frame.h  Instruction.h  Opcode.cpp  Opcode.h  VM.cpp  VM.h  Value.cpp  Value.h
